# android_kernel_google_zuma

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  Kbuild  Kconfig  Makefile  Makefile.include  PREUPLOAD.cfg  README.md  aiutils.c  aoc.c  aoc_channel_dev.c  aoc_firmware.c  aoc_firmware.h  aoc_ramdump_regions.h  aoc_tbn_service_dev.c  aoc_uwb_service_dev.c  aoc_v1.c  auth-control.h  auth13.c  auth22-ake.c  auth22-lc.c  auth22-stream.c  auth22.c  auth22.h  bbd.h  bcm_app_utils.c  bcm_gps_spi.c  bcm_gps_spi.h  bcm_l2_filter.c  bcmbloom.c  bcmcapext.c  bcmevent.c  bcmsdh.c  bcmsdh_sdmmc.c  bcmsdh_sdmmc_linux.c  bcmsdspi.h  bcmsdspi_linux.c  bcmstdlib_s.c  bcmutils.c  (+225 more)
alsa/: Makefile  (+6 more)
audiometrics/: BUILD.bazel
common/include/: BUILD.bazel
cs35l45/: BUILD.bazel
cs40l26/: BUILD.bazel  Makefile  cs40l26-codec.c
drivers/edgetpu/: BUILD.bazel  Kbuild  edgetpu-core.c  edgetpu-dmabuf.h  edgetpu-firmware.h  edgetpu-fs.c  edgetpu-google-iommu.c  edgetpu-mailbox.h  edgetpu-mapping.h  edgetpu-mobile-platform.c  edgetpu-pm.c  edgetpu-pm.h  edgetpu-soc.h  edgetpu-sw-watchdog.c  edgetpu-sw-watchdog.h  edgetpu-telemetry.c  edgetpu-usage-stats.h  edgetpu-wakelock.h  edgetpu.h  mobile-firmware.c  mobile-firmware.h  mobile-pm.h  rio-platform.h
drivers/edgetpu/rio/: config-pwr-state.h
drv2624/: BUILD.bazel
dts/: BUILD.bazel  google-dts-base
dts/google/: zuma-husky-audio.dtsi  zuma-husky-battery-data.dtsi  zuma-husky-battery.dtsi  zuma-husky-camera.dtsi  zuma-husky-common.dtsi  zuma-husky-dvt1.dts  zuma-ripcurrent-battery.dtsi  zuma-ripcurrent-bluetooth.dtsi  zuma-ripcurrent-haptics.dtsi  zuma-ripcurrent-pmic.dtsi  zuma-ripcurrent-sbbm.dtsi  zuma-ripcurrent-thermal.dtsi  zuma-ripcurrent-typec.dtsi  zuma-ripcurrent-usb.dtsi  zuma-ripcurrent-wcharger-ra9530.dtsi  zuma-ripcurrent.dts  zuma-shiba-audio.dtsi  zuma-shiba-battery-data.dtsi  zuma-shiba-evt1.dts  zuma-shiba-evt1_1-wingboard.dts  zuma-shiba-evt1_b0.dts  zuma-shiba-ldaf.dtsi  zuma-shiba-proto1.dts  zuma-shiba-proto1_1.dts  zuma-shiba-pvt1.dts  zuma-shusky-audio.dtsi  zuma-shusky-bcl.dtsi  zuma-shusky-board.dtsi  zuma-shusky-dma-heap.dtsi  zuma-shusky-pcie.dtsi  zuma-shusky-pmic.dtsi  zuma-shusky-sbbm.dtsi  zuma-shusky-usecases.dtsi  zuma-shusky-wcharger.dtsi
fs/: exec.c  (+3 more)
google-devices/shusky/: BUILD.bazel  build.config.shusky  build_shusky.sh  shusky_gki.fragment
google-devices/shusky/display/: BUILD.bazel  Kbuild  Makefile  panel-google-bigsurf.c  panel-google-hk3.c
google-devices/shusky/dts/: Makefile
google-devices/shusky/insmod_cfg/: init.insmod.husky.cfg  init.insmod.ripcurrent.cfg
google-modules/amplifiers/cs35l41/: BUILD.bazel  cs35l41-i2c.c  cs35l41-spi.c  cs35l41.c  wm_adsp.c
google-modules/amplifiers/cs40l25/: BUILD.bazel  cs40l2x.c
google-modules/amplifiers/tas256x/: BUILD.bazel
google-modules/aoc/alsa/: BUILD.bazel  Kbuild  Makefile  aoc_alsa.h  aoc_alsa_card.c  aoc_alsa_ctl.c  aoc_alsa_drv.h  aoc_alsa_hw.c  aoc_alsa_incall.c  aoc_alsa_path.c  aoc_alsa_pcm.c  aoc_alsa_usb.c  google-aoc-enum.h
google-modules/aoc/usb/: BUILD.bazel  Kbuild  Makefile  aoc_usb.h  aoc_usb_dev.c  usb_hooks_impl_whi.c  xhci_offload_impl.h
google-modules/bms/: BUILD.bazel  Makefile  OWNERS  gbms_storage.c  google_battery.c  google_bms.c  google_bms.h  google_charger.c  google_cpm.c  google_dc_pps.c  google_dock.c  ln8411_charger.h  ln8411_driver.c  ln8411_regs.h  max1720x_battery.c  max1720x_battery.h  max77729_charger.c  max77729_pmic.c  max77759_usecase.c  max77759_usecase.h  max77779_charger.c  max77779_fg.h  max77779_fg_model.c  max77779_i2cm.c  max77779_pmic.c  max77779_pmic.h  max77779_pmic_irq.c  max77779_pmic_sgpio.c  max77779_usecase.c  max77779_usecase.h  max77779_v060_prelim_regs.h  max77779_v070_0510b_prelim_regs.h  max_m5.c  max_m5.h  p9221_charger.c  p9221_charger.h  p9221_chip.c  pca9468_charger.c  pca9468_gbms_pps.c
google-modules/bms/misc/: BUILD.bazel  Kconfig  Makefile  gvotable.c  logbuffer.c  logbuffer.h
google-modules/display/samsung/: BUILD.bazel  Kbuild  exynos_drm_connector.h  exynos_drm_crtc.c  exynos_drm_crtc.h  exynos_drm_debug.c  exynos_drm_decon.c  exynos_drm_decon.h  exynos_drm_dp.h  exynos_drm_dpp.c  exynos_drm_dpp.h  exynos_drm_drv.c  exynos_drm_dsim.c  exynos_drm_dsim.h  exynos_drm_fb.c  exynos_drm_gem.c  exynos_drm_hibernation.c  exynos_drm_hibernation.h  exynos_drm_writeback.c
google-modules/hdcp/samsung/: BUILD.bazel  Kconfig  auth-control.c  auth13.c  auth13.h  auth22-internal.h  auth22-repeater.c  auth22-ske.c  auth22.c  dpcd.c  dpcd.h  hdcp-log.h  hdcp.h  selftest.c
mali_kbase/: BUILD.bazel  Kbuild  Makefile  mali_base_hwconfig_issues.h  mali_kbase_config.h  mali_kbase_config_defaults.h  mali_kbase_core_linux.c  mali_kbase_ctx_sched.c  mali_kbase_dummy_job_wa.c  mali_kbase_gpuprops.c  mali_kbase_gwt.c  mali_kbase_hw.c  mali_kbase_jd.c  mali_kbase_js.c  mali_kbase_mem.h  mali_kbase_mem_migrate.c  mali_kbase_mem_pool.c  mali_kbase_pm.c  mali_kbase_pm.h  mali_kbase_reset_gpu.h  mali_kbase_softjobs.c  mali_kbase_sync.h  mali_kbase_vinstr.c
mali_kbase/context/: mali_kbase_context.c
mali_kbase/csf/: mali_kbase_csf.c  mali_kbase_csf.h  mali_kbase_csf_cpu_queue.c  mali_kbase_csf_cpu_queue_debugfs.c  mali_kbase_csf_csg_debugfs.c  mali_kbase_csf_defs.h  mali_kbase_csf_event.c  mali_kbase_csf_firmware.h  mali_kbase_csf_firmware_cfg.c  mali_kbase_csf_firmware_cfg.h  mali_kbase_csf_firmware_core_dump.c  mali_kbase_csf_firmware_core_dump.h  mali_kbase_csf_firmware_no_mali.c  mali_kbase_csf_kcpu.c  mali_kbase_csf_mcu_shared_reg.c  mali_kbase_csf_reset_gpu.c  mali_kbase_csf_scheduler.c  mali_kbase_csf_scheduler.h  mali_kbase_csf_sync_debugfs.c  mali_kbase_csf_tiler_heap_reclaim.c  mali_kbase_csf_trace_buffer.c  mali_kbase_csf_trace_buffer.h
mali_kbase/debug/: mali_kbase_debug_ktrace_codes.h  mali_kbase_debug_linux_ktrace.h
mali_kbase/jm/: mali_kbase_js_defs.h
mali_kbase/mmu/: mali_kbase_mmu.c  mali_kbase_mmu.h  mali_kbase_mmu_hw.h  mali_kbase_mmu_hw_direct.c
mali_kbase/platform/: Kconfig
mali_pixel/: BUILD.bazel  Makefile  memory_group_manager.c
samsung/include/: BUILD.bazel
(+1945 files in other folders)
