# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
    name = "shusky.dt",
    srcs = glob([
        "Makefile",
        "google/Makefile",
        "google/**/*.dtsi",
        "google/**/*.dts",
        "google-dts-base",
        "google-dts-base/Makefile",
        "google-dts-base/**/*.dts",
        "google-dts-base/**/*.dtsi",
    ]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    visibility = [
        "//private/devices/google/shusky:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
