# SPDX-License-Identifier: GPL-2.0

filegroup(
    name = "headers",
    srcs = glob([
        "trace/*.h",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display/samsung:__subpackages__",
        "//private/google-modules/touch:__subpackages__",
    ],
)
