# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "aoc.usb",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
        "Makefile",
    ]) + [
        "//private/google-modules/aoc_ipc:headers",
        "//private/google-modules/aoc:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "aoc_usb_driver.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/aoc",
        "//private/google-modules/aoc/alsa",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
